<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/space_very_huge"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_centerInParent="true"
        android:layout_width="300dp"
        android:layout_height="400dp"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <RelativeLayout
            android:padding="@dimen/space_very_huge"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/logo"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:paddingTop="@dimen/space_very_huge"
                android:layout_below="@+id/logo"
                android:textSize="@dimen/title_size"
                android:id="@+id/connexion"
                android:text="@string/connexion_screen"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_marginTop="@dimen/space_huge"
                android:layout_below="@+id/connexion"
                android:id="@+id/login"
                android:hint="@string/placeholder_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle" />

            <EditText
                android:layout_below="@+id/login"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/placeholder_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/EditTextStyle"/>

            <Button
                android:layout_marginTop="@dimen/space_huge"
                android:layout_below="@+id/password"
                android:id="@+id/btn_valid"
                android:text="@string/connexion_screen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"/>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>